--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.4.0",
+    "react-phone-number-input": "^3.2.6",
     "react-scripts": "^2.1.3",
     "styled-components": "^5.3.5",
     "web-vitals": "^0.2.4"
