--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://knnadeera.github.io/SLRC-Store",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.4",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
@@ -11,7 +12,9 @@
     "react-dom": "^18.0.0",
     "react-icons": "^4.4.0",
     "react-phone-number-input": "^3.2.6",
+    "react-redux": "^8.0.2",
     "react-scripts": "^2.1.3",
+    "redux": "^4.2.0",
     "styled-components": "^5.3.5",
     "web-vitals": "^0.2.4"
   },
