--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-icons": "^4.4.0",
     "react-phone-number-input": "^3.2.6",
     "react-redux": "^8.0.2",
+    "react-router-dom": "^5.3.3",
     "react-scripts": "^2.1.3",
     "redux": "^4.2.0",
     "styled-components": "^5.3.5",
