--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "predeploy": "npm run build", 
+    "deploy": "gh-pages -d build",
+    "postdeploy": "firebase deploy"
   },
   "eslintConfig": {
     "extends": [
