added addNewPart page 1

--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build", 
-    "deploy": "gh-pages -d build",
-    "postdeploy": "firebase deploy"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
